syntax = "proto3";

package org.cqu.edu.msc.annihilation.campephilus.module.message.protobuf.pojo;

message AfterOperationInfo {

    /**
     * 标记id，自动增长
     */
    int32 afterOperationId = 1;

    /**
     * 反馈信息
     */
    string feedbackContent = 2;

    /**
     * 住院号
     */
    string admissionNumber = 3;
}