syntax = "proto3";

package org.cqu.edu.msc.annihilation.campephilus.module.message.protobuf.pojo;

message BeforeOperationInfo {

    /**
     * 标记id，自动增长
     */
    int32 beforeOperationId = 1;

    /**
     * 麻醉方式
     */
    string anesthesiaMode = 2;

    /**
     * 是否急诊
     */
    bool isUrgent = 3;

    /**
     * 是否增强
     */
    bool isStrong = 4;

    /**
     * ASA等级
     */
    int32 ASALevel = 5;

    /**
     * 既往病史
     */
    string medicalHistory = 6;

    /**
     * 特殊情况
     */
    string specialCase = 7;

    /**
     * 住院号
     */
    string admissionNumber = 8;
}